syntax = "proto3";
package websocket_api;

import "order.proto";
import "trade.proto";

message MarketData {
  int64 id = 1;
  repeated Order orders = 2;
  repeated Trade trades = 3;
}